--- a/ghi/index.html
+++ b/ghi/index.html
@@ -42,14 +42,14 @@
       </div>
     </div>
     <div class="container">
-      <h2>Upcoming conferences</h2>
+      <h2>Upcoming Conferences</h2>
       <div class="row">
         <div class="col">
           <div class="card">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Conference name</h5>
-              <p class="card-text">Conference description</p>
+              <h5 class="card-title">Conference Name</h5>
+              <p class="card-text">Conference Description</p>
             </div>
           </div>
         </div>
