--- a/ghi/index.html
+++ b/ghi/index.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <title>Conference GO!</title>
   <script type="module" src="./js/app.js"></script>
+  <script type="module" src="./js/checkStatus.js"></script>
 </head>
 <body>
   <header>
@@ -21,10 +22,20 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="new-location.html">New Location</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="new-conference.html">New Conference</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link d-none" aria-current="page" href="new-presentation.html">New Presentation</a>
+            </li>
           </ul>
           <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search conferences" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <button class="btn btn-outline-success me-2" type="submit">Search</button>
+            <a class="btn btn-primary" href="attend-conference.html">Attend!</a>
           </form>
         </div>
       </div>
@@ -39,29 +50,19 @@
           The only resource you'll ever need to plan an run your in-person or
           virtual conference for thousands of attendees and presenters.
         </p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+          <a href ="attend-conference.html" type="button" class="btn btn-primary btn-lg px-4 gap-3">Attend Conference!</a>
+        </div>
       </div>
     </div>
     <div class="container">
       <h2>Upcoming Conferences</h2>
-      <div class="row">
-        <div class="col">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Conference Name</h5>
-              <p class="card-text">Conference Description</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-
-        </div>
-        <div class="col">
-
-        </div>
+      <div class = "error"></div>
+      <div class="row row-cols-3">
       </div>
     </div>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
+
