Update To Index

--- a/ghi/index.html
+++ b/ghi/index.html
@@ -29,7 +29,7 @@
               <a class="nav-link" aria-current="page" href="new-conference.html">New Conference</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link d-none" aria-current="page" href="new-presentation.html">New Presentation</a>
+              <a class="nav-link" aria-current="page" href="new-presentation.html">New Presentation</a>
             </li>
           </ul>
           <form class="d-flex">
