--- a/ghi/new-conference.html
+++ b/ghi/new-conference.html
@@ -23,7 +23,7 @@
                 <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="new-location.html">New Location</a>
+                <a class="nav-link d-none" aria-current="page" href="new-location.html">New Location</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="new-conference.html">New Conference</a>
