--- a/ghi/new-location.html
+++ b/ghi/new-location.html
@@ -26,7 +26,7 @@
                 <a class="nav-link active" aria-current="page" href="new-location.html">New Location</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="new-conference.html">New Conference</a>
+                <a class="nav-link d-none" aria-current="page" href="new-conference.html">New Conference</a>
             </li>
             <li class="nav-item">
               <a class="nav-link d-none" aria-current="page" href="new-presentation.html">New Presentation</a>
