--- a/ghi/attend-conference.html
+++ b/ghi/attend-conference.html
@@ -77,7 +77,7 @@
                   <div class="col">
                     <div class="form-floating mb-3">
                       <input required placeholder="Your full name" type="text" id="name" name="name" class="form-control">
-                      <label for="name">Your Full Name</label>
+                      <label for="name">Your Name</label>
                     </div>
                   </div>
                   <div class="col">
