--- a/ghi/attend-conference.html
+++ b/ghi/attend-conference.html
@@ -77,17 +77,17 @@
                   <div class="col">
                     <div class="form-floating mb-3">
                       <input required placeholder="Your full name" type="text" id="name" name="name" class="form-control">
-                      <label for="name">Your Name</label>
+                      <label for="name">Name</label>
                     </div>
                   </div>
                   <div class="col">
                     <div class="form-floating mb-3">
                       <input required placeholder="Your email address" type="email" id="email" name="email" class="form-control">
-                      <label for="email">Your Email Address</label>
+                      <label for="email">Email Address</label>
                     </div>
                   </div>
                 </div>
-                <button class="btn btn-lg btn-primary">I'm Going!</button>
+                <button class="btn btn-lg btn-primary">Attend!</button>
               </form>
               <div class="alert alert-success d-none mb-0" id="success-message">
                 Congratulations! You're all signed up!
