--- a/ghi/new-location.html
+++ b/ghi/new-location.html
@@ -44,7 +44,7 @@
       <div class="row">
         <div class="offset-3 col-6">
           <div class="shadow p-4 mt-4">
-            <h1>New Location</h1>
+            <h1>New Location!</h1>
             <form id="create-location-form">
               <div class="form-floating mb-3">
                 <input placeholder="Name" required type="text" name = "name" id="name" class="form-control">
