--- a/ghi/new-presentation.html
+++ b/ghi/new-presentation.html
@@ -43,7 +43,7 @@
       <div class="row">
         <div class="offset-3 col-6">
           <div class="shadow p-4 mt-4">
-            <h1>New Presentation</h1>
+            <h1>New Presentation!</h1>
             <form id="create-presentation-form">
               <div class="form-floating mb-3">
                 <input placeholder="Presenter name" required type="text" name="presenter_name" id="presenter_name" class="form-control">
