--- a/ghi/attend-conference.html
+++ b/ghi/attend-conference.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="mb-3">
                   <select name="conference" id="conference" class="form-select d-none" required>
-                    <option value="">Choose Conference</option>
+                    <option value="">Conference</option>
                   </select>
                 </div>
                 <p class="mb-3">
