--- a/ghi/login.html
+++ b/ghi/login.html
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link d-none" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link d-none" aria-current="page" href="new-location.html">New Location</a>
@@ -36,7 +36,7 @@
             </li>
           </ul>
           <form class="d-flex">
-            <a class="btn btn-primary" href="attend-conference.html">Attend!</a>
+            <a class="btn btn-primary d-none" href="attend-conference.html">Attend!</a>
           </form>
         </div>
       </div>
