--- a/ghi/login.html
+++ b/ghi/login.html
@@ -13,14 +13,14 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand d-none" href="/">Conference GO!</a>
+        <a class="navbar-brand" href="/">Conference GO!</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link d-none" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link d-none" aria-current="page" href="new-location.html">New Location</a>
@@ -29,14 +29,14 @@
               <a class="nav-link d-none" aria-current="page" href="new-conference.html">New Conference</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link d-none" aria-current="page" href="new-presentation.html">New Presentation</a>
+              <a class="nav-link" aria-current="page" href="new-presentation.html">New Presentation</a>
             </li>
             <li class="nav-item">
               <a class="nav-link d-none" aria-current="page" href="new-presentation.html">New Presentation</a>
             </li>
           </ul>
           <form class="d-flex">
-            <a class="btn btn-primary d-none" href="attend-conference.html">Attend!</a>
+            <a class="btn btn-primary" href="attend-conference.html">Attend!</a>
           </form>
         </div>
       </div>
