Minor HTML Touches

--- a/ghi/index.html
+++ b/ghi/index.html
@@ -54,7 +54,7 @@
       </div>
     </div>
     <div class="container">
-      <h2>Upcoming Conferences</h2>
+      <h2>Upcoming Conferences!</h2>
       <div class = "error"></div>
       <div class="row row-cols-3">
       </div>
